# StellarDrift

./: CMakeLists.txt
inc/: character_info.h  character_scene.h  config.h  gameplay_scene.h  menu_scene.h  option_scene.h  scene.h  util.h
inc/gameplay/: entity.h  gameplay_scene.h  player.h  tile.h  world_gen.h
src/: character_scene.cpp  gameplay_scene.cpp  main.cpp  menu_scene.cpp  option_scene.cpp  timer.cpp
src/gameplay/: gameplay_scene.cpp  player.cpp  tile.cpp  world_gen.cpp
